adding login page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 spring.application.name=wallet
 # Database Configuration (H2 for now)
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+# Connect to Docker PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/wallet_db
+spring.datasource.username=wallet_user
+spring.datasource.password=wallet_password
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# JPA Settings
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+# JPA Settings (Auto-create tables)
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Keep the H2 console disabled (since we aren't using it anymore)
+spring.h2.console.enabled=false
